# easydags

./: .gitignore  README.md  Tutorial_ETL_with_soft_dependencies.ipynb  Tutorial_ML toy.ipynb  Tutorial_imbalance_gs.ipynb  api_example.py  dag.py  draw_ensemble.py  ensemble.py  ensemble2.py  hard.py  hard2.py  hardrn.py  no_output.py  pyproject.toml  real_ensemble.py  requirements.txt  setup.cfg  setup.py  soft.py  soft2.py
.github/workflows/: python-publish.yml  tests.yml
easydags/: __init__.py  dag.py  node.py  ops.py
tests/: gray_run_test.py  lonely_test.py  no_draw_test.py
