[metadata]
name = easydags
version = 0.0.1
author = Mateo Graciano
author_email = magralo@gmail.com
description = Dags made easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magralo/easydags


[options]
packages = find:
python_requires = >=3.7
include_package_data = True